Fix overflow on index

--- a/my_css_file.css
+++ b/my_css_file.css
@@ -31,6 +31,7 @@
 	  }
 	
 	  .box {
+		overflow: hidden;
 		width: 50%;
 		height: 100%;
 		background-color: #474747;
